<resources>
    <string name="app_name">Menu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu">Меню</string>
    <string name="profile">Профиль</string>
    <string name="basket">Пока ваша корзина пуста</string>
    <string name="structure">Ветчина, шампиньоны, увеличинная порция моцареллы, томатный соус</string>
    <string name="price">325 р</string>
    <string name="name">Name: %1$s</string>
    <string name="species">Species: %1$s</string>
    <string name="dishes_description">Описание блюда</string>
    <string name="strMeal">Название: %1$s</string>
    <string name="strArea">Страна: %1$s</string>
    <string name="strCategory">Категория: %1$s</string>
    <string name="strIngredient1">Ингредиент: %1$s</string>
    <string name="strInstructions">Инструкция: %1$s</string>
    <string name="add_basket"> Добавить в корзину </string>
    <string-array name="city">
        <item>Москва</item>
        <item>Курск</item>
        <item>Казань</item>
        <item>Орел</item>
    </string-array>
</resources>