<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="30dp"
>

        <ImageView
            android:id="@+id/photoDish"
            android:layout_width="300dp"
            android:layout_height="300dp"
            tools:srcCompat="@tools:sample/avatars" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/titleDish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginStart="55dp"
        tools:ignore="MissingConstraints"
        tools:text="@string/strMeal" />

    <TextView
        android:id="@+id/countryDish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="55dp"
        tools:text="@string/strArea" />

    <TextView
        android:id="@+id/categoryDish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="55dp"
        tools:text="@string/strCategory" />

    <TextView
        android:id="@+id/ingredientsDish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginStart="55dp"
        tools:text="@string/strIngredient1" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="65dp">

    <TextView
        android:id="@+id/instructionDish"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/strInstructions" />

    </ScrollView>

</LinearLayout>